<resources>
    <string name="app_name">WeNave</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_create_route">Create route</string>
    <string name="nav_my_routes">My routes</string>
    <string name="cardview_rain">Rain</string>
    <string name="cardview_humidity">Humidity</string>
    <string name="dialog_add_route">Add a route name...</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="cardview_creation_date">Creation date</string>
    <string name="cardview_start">Route\'s start</string>
    <string name="cardview_end">Route\'s end</string>
    <string name="info_routes_title_forecast">Forecast</string>
    <string name="normal_mode_hint">Normal mode</string>
    <string name="location_mode_hint">Location mode</string>
    <string name="circuit_mode_hint">Circuit mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_routes">Routes</string>
    <string name="settings_about">About</string>
    <string name="settings_darksky">Climatology provided by Dark Sky</string>
    <string name="settings_mapbox">Maps powered by Mapbox</string>
    <string name="settings_flaticon">Routes modes icons provided by Flat Icon</string>

</resources>
