<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_routes">
        <menu>

            <item
                android:id="@+id/create_route"
                android:icon="@drawable/ic_navigation"
                android:title="@string/nav_create_route" />
            <item
                android:id="@+id/route"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/nav_my_routes" />

        </menu>
    </item>

    <item android:title="@string/nav_settings">
        <menu>

            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

        </menu>
    </item>




</menu>