<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.MainMapFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </com.mapbox.mapboxsdk.maps.MapView>

    <LinearLayout
        android:id="@+id/wrap_mode_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="start|top"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:layout_constraintTop_toTopOf="@+id/mapView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/normal_mode_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:focusable="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/normal_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_normal_mode"
                app:backgroundTint="@color/mode_button"
                app:fabSize="mini" />

            <TextView
                android:id="@+id/normal_mode_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/normal_mode_hint"
                android:textColor="@color/mapbox_blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/normal_mode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_mode_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:focusable="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/location_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_location_mode"
                app:backgroundTint="@color/mode_button"
                app:fabSize="mini" />

            <TextView
                android:id="@+id/location_mode_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/location_mode_hint"
                android:textColor="@color/buttons_background"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/location_mode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/circuit_mode_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:focusable="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/circuit_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/buttons_background"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_circuit_mode"
                app:backgroundTint="@color/mode_button"
                app:fabSize="mini" />

            <TextView
                android:id="@+id/circuit_mode_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/circuit_mode_hint"
                android:textColor="@color/buttons_background"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circuit_mode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_search_white"
        app:backgroundTint="@color/buttons_background"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/more"
        app:layout_constraintEnd_toEndOf="@+id/more"
        app:layout_constraintStart_toStartOf="@+id/more"
        app:layout_constraintTop_toTopOf="@+id/more" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_date_white"
        app:backgroundTint="@color/buttons_background"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/more"
        app:layout_constraintEnd_toEndOf="@+id/more"
        app:layout_constraintStart_toStartOf="@+id/more"
        app:layout_constraintTop_toTopOf="@+id/more" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_delete_black_24dp"
        app:backgroundTint="@color/buttons_background"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/more"
        app:layout_constraintEnd_toEndOf="@+id/more"
        app:layout_constraintStart_toStartOf="@+id/more"
        app:layout_constraintTop_toTopOf="@+id/more" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/ic_more_white"
        app:backgroundTint="@color/buttons_background"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="@+id/mapView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:visibility="invisible"
        android:src="@drawable/ic_navigation_black_24dp"
        app:backgroundTint="@color/buttons_background"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toStartOf="@+id/more" />

    <TextView
        android:id="@+id/option_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/mapbox_blue"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/mapView"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>